# UNLV

./: LICENSE  pretrain.ipynb  pyproject.toml  swin_train.ipynb  swin_train.py
reo_gia/datasets/: __init__.py  base.py
reo_gia/datasets/imagenet1k/: __init__.py
reo_gia/models/: base.py
reo_gia/models/convnext/: modeling_covnext.py
reo_gia/models/resnet/: modeling_resnet.py
reo_gia/models/swint/: modeling_swint.py
reo_gia/utils/: gradient_inversion.py  gradient_inversion_attack_SF.ipynb
src/models/: base.py
src/models/convnext/: __init__.py  modeling_covnext.py
src/models/resnet/: modeling_resnet.py
src/models/swint/: modeling_swint.py
src/models/vit/: modeling_vit.py
src/swint/: __init__.py  modeling_swint.py
src/utils/: ResNet15_trained_on_ImageNet_refactoring (1).ipynb
