[project]
name = "unlv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0",

    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "huggingface-hub>=1.4.1",

    "image>=1.5.33",
    "matplotlib>=3.10.8",
]
